[package]
name = "rabbiteer"
version = "0.1.2"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "AMQP/RabbitMQ input/output CLI tool"
repository = "https://github.com/algesten/rabbiteer-rs"
license = "MIT"
keywords = ["amqp", "rabbitmq"]
readme = "README.md"

[dependencies]
clap = "2"
conduit-mime-types = "0.7"

[dependencies.amqp]
version = "0.0.19"
default-features = false
